Version 1.11:

	* fix script replacement directories to be different to install directories

Version 1.10:

	* fix URLs to point to fdo 
	* check for signal path validity in Java
	* fix NameAcquired spelling
	* check array lengths and name lengths
	* support method calls with empty interfaces
	* support for non-activating remote objects
	* remove errant debug statemant left in 1.9
	* Fix List<List<Integer>> bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>
	* Fix OBJECT_PATH handling; bug spotted by Remi Emonet
	  <remi.emonet -at- inrialpes -dot- fr>
	* added getRemoteObject and getPeerRemoteObject methods with
	  introspection support to guess interfaces.
	* changed introspection to recurse over the exported object tree
	  and show sub-objects.
	* compare maps unordered in tests; spotted by Simon McVittie 
	  <simon -dot- mcvittie -at- collabora -dot- co -dot- uk>
	* implement UInt64 with BigInteger to allow full-range UInt64s
	* fix $ in introspection data for nested interfaces
	* fix the required dbus version in the docs
	* can now send DBUS_TYPE_SIGNATURE as Type[]
	* rewrite Variant handling to work with complex types
	* add $JAVA_HOME/include and $JAVA_HOME/include/linux to CFLAGS
	  (Fix from Joshua Nichols <nichoj -at- gentoo -dot- org>)
	* remove unneccessary build warnings
	  (Fix from Joshua Nichols <nichoj -at- gentoo -dot- org>)
	* seperate install and install-doc targets
	  (Suggested by Ralf Kistner <ralf.kistner -at- gmail -dot- com>)
	* add -fno-stack-protector flag (only for gcc 4.1 or later)
	  (Suggested by Ralf Kistner <ralf.kistner -at- gmail -dot- com>)
	* Revamp tuples
	* Build without DBUS_API_SUBJECT_TO_CHANGE set
	* fix LDFLAGS to work properly with --as-needed
	  (Suggested by TFKyle)
	* Update CreateInterface to new API
	* More speed fixes with type introspection
	* Add README and INSTALL files
	* Change wrappers to point to installed locations

Version 1.9:

	* Map and List handling optimisations 